plugins {
    id 'com.android.application'
}

def selfRunDriveVersionCode = 2020037
def selfRunDriveVersionName = '2.3.2-dev5'

android {
    namespace 'com.shaterguy.chatgptselfrun'
    compileSdk 36

    defaultConfig {
        applicationId 'com.shaterguy.chatgptselfrun.drive'
        minSdk 26
        targetSdk 36
        versionCode selfRunDriveVersionCode
        versionName selfRunDriveVersionName
        testInstrumentationRunner 'com.shaterguy.chatgptselfrun.SelfRunAndroidTestRunner'
        manifestPlaceholders = [selfRunAppLabel: 'SelfRun Drive']
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        qaApp {
            initWith release
            applicationIdSuffix '.test'
            manifestPlaceholders = [selfRunAppLabel: 'SelfRun Drive TEST']
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        buildConfig = true
    }
}

dependencies {
    implementation 'com.google.android.gms:play-services-auth:21.6.0'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'androidx.webkit:webkit:1.17.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.json:json:20260814'
    androidTestImplementation 'androidx.test:core:1.7.0'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
}

def verifyDriveVariantIdentity = tasks.register('verifyDriveVariantIdentity') {
    group = 'verification'
    doLast {
        def expectedId = 'com.shaterguy.chatgptselfrun.drive'
        if (android.defaultConfig.applicationId != expectedId) {
            throw new GradleException("SelfRun Drive applicationId must be ${expectedId}")
        }
        if (android.defaultConfig.versionCode != selfRunDriveVersionCode
                || android.defaultConfig.versionName != selfRunDriveVersionName) {
            throw new GradleException('SelfRun Drive version identity mismatch')
        }
        if (selfRunDriveVersionName != '2.3.2-dev5') {
            throw new GradleException('SelfRun Drive development version must be 2.3.2-dev5')
        }
        def testType = android.buildTypes.getByName('qaApp')
        if (testType.applicationIdSuffix != '.test') {
            throw new GradleException('SelfRun Drive TEST applicationId suffix must remain .test')
        }
        def manifest = file('src/main/AndroidManifest.xml').getText('UTF-8')
        if (manifest.contains('android:sharedUserId')) {
            throw new GradleException('sharedUserId is forbidden')
        }
        def authorities = (manifest =~ /android:authorities="([^"]+)"/).collect { it[1] }
        if (authorities.any { it != '${applicationId}.fileprovider' && !it.startsWith('${applicationId}.') }) {
            throw new GradleException('every provider authority must derive from applicationId')
        }
        def service = file('src/main/java/com/shaterguy/chatgptselfrun/SelfRunService.java').getText('UTF-8')
        ['RUN', 'PAUSE', 'RESUME'].each { action ->
            if (!service.contains('BuildConfig.APPLICATION_ID + ".' + action + '"')) {
                throw new GradleException("${action} action must derive from applicationId")
            }
        }
        def webConfig = file('src/main/java/com/shaterguy/chatgptselfrun/WebViewConfig.java').getText('UTF-8')
        if (!webConfig.contains('RequestProfileScript.installDocumentStart')) {
            throw new GradleException('SelfRun 2.0 request profile document-start interceptor is required')
        }
        if (!webConfig.contains('HybridRequestProfileScript.installDocumentStart')) {
            throw new GradleException('SelfRun HYBRID request profile bridge is required')
        }
        if (webConfig.contains('TurnCompletionDomFallbackScript')
                || file('src/main/java/com/shaterguy/chatgptselfrun/TurnCompletionDomFallbackScript.java').exists()) {
            throw new GradleException('DOM completion fallback is forbidden')
        }
        if (!webConfig.contains('static boolean applyAutomation')
                || !webConfig.contains('if (!protocolAvailable)')
                || !service.contains('TURN_PROTOCOL_UNAVAILABLE')) {
            throw new GradleException('protocol capability failure must fail closed')
        }
        if (!webConfig.contains('TurnProtocolLogBridge.install')) {
            throw new GradleException('response protocol observability bridge is required')
        }
        if (!webConfig.contains('ChatGptTurnProtocolScript.installDocumentStart')) {
            throw new GradleException('protocol-first response state document-start interceptor is required')
        }
        if (!webConfig.contains('WorkTurnProtocolIngressScript.installDocumentStart')) {
            throw new GradleException('Work transport protocol ingress document-start interceptor is required')
        }
        if (!webConfig.contains('WorkProtocolTransportCaptureScript.installDocumentStart')) {
            throw new GradleException('Work transport capture and relay document-start interceptor is required')
        }
        def protocol = file('src/main/java/com/shaterguy/chatgptselfrun/ChatGptTurnProtocolScript.java').getText('UTF-8')
        if (!protocol.contains('bindTurn') || !protocol.contains('turnToken')
                || protocol.contains('__selfRunDriveTurnObserver')) {
            throw new GradleException('protocol-owned turn token contract is required')
        }
        def host = file('src/main/java/com/shaterguy/chatgptselfrun/HeadlessWebViewHost.java').getText('UTF-8')
        if (!host.contains('virtualDisplay.setSurface(null)')
                || !host.contains('virtualDisplay.setSurface(surface)')) {
            throw new GradleException('detachable VirtualDisplay Surface support is required')
        }
        if (service.contains('observeTurnCompletion') || service.contains('TURN_OBSERVER_HEALTHCHECK_MS')
                || service.contains('recoverDetachedObserverOutput')) {
            throw new GradleException('WAIT_TURN_COMPLETION must not poll DOM completion state')
        }
    }
}
